fix: card-description mobile

--- a/src/blocks/card-description/card-description.css
+++ b/src/blocks/card-description/card-description.css
@@ -74,7 +74,11 @@
 .card-description__line {
   grid-column: 1/3;
   width: 100%;
-  background-color: rgba(84, 84, 84, 0.7);
+
+  border: 0;
+  height: 1px;
+  background: rgba(84, 84, 84, 0.7);
+
 }
 
 @media all and (max-width: 950px) {
